--- a/P4Kube.ipynb
+++ b/P4Kube.ipynb
@@ -451,6 +451,7 @@
     "    cd ~/p4-integrations-nodeport/kubectl-plugin;\n",
     "    go get k8s.io/client-go@latest;\n",
     "    go get k8s.io/metrics/pkg/client/clientset/versioned;\n",
+    "    cp main.go_LOAD_AWARE main.go;\n",
     "    go build;\n",
     "\n",
     "    echo 'export PATH=\"/home/ubuntu/p4-integrations-nodeport/kubectl-plugin/:$PATH\"' >> ~/.bashrc;\n",
