--- a/P4Kube.ipynb
+++ b/P4Kube.ipynb
@@ -221,7 +221,7 @@
    "source": [
     "# Create a token in github and clone P4Kube code\n",
     "p4project = f\"\"\"\n",
-    "    git clone https://{GITHUB_TOKEN}:x-oauth-basic@github.com/gareging/p4-integrations-nodeport.git\n",
+    "    git clone https://{GITHUB_TOKEN}:x-oauth-basic@github.com/gareging/P4Kube.git\n",
     "\"\"\"\n",
     "slice.get_node('p4switch').execute(p4project)\n",
     "print('Done, move to the next step')"
@@ -238,7 +238,7 @@
     "commands = \"\"\"\n",
     "    pip3 install protobuf==3.20.*;\n",
     "    pip3 install googleapis-common-protos;\n",
-    "    cd p4-integrations-nodeport;\n",
+    "    cd P4Kube;\n",
     "    mkdir build;\n",
     "    mkdir logs;\n",
     "    mkdir pcaps;\n",
@@ -284,7 +284,7 @@
    "source": [
     "# Run the controller for P4Kube P4 program\n",
     "commands = \"\"\"\n",
-    "    cd p4-integrations-nodeport;\n",
+    "    cd P4Kube;\n",
     "    python3 mycontroller.py;\n",
     "\"\"\"\n",
     "slice.get_node('p4switch').execute(commands)\n",
@@ -387,7 +387,7 @@
     "# Clone repo\n",
     "print(GITHUB_TOKEN)\n",
     "node = slice.get_node('master')\n",
-    "script = f'git clone https://{GITHUB_TOKEN}:x-oauth-basic@github.com/gareging/p4-integrations-nodeport.git;'\n",
+    "script = f'git clone https://{GITHUB_TOKEN}:x-oauth-basic@github.com/gareging/P4Kube.git;'\n",
     "node.execute(script)"
    ]
   },
@@ -401,7 +401,7 @@
     "# Setup the deployment and service (optional)\n",
     "node = slice.get_node('master')\n",
     "script = '''     \n",
-    "    cd p4-integrations-nodeport/;\n",
+    "    cd P4Kube/;\n",
     "    kubectl create -f nginx-deployment.yaml;\n",
     "    kubectl create -f nginx-service.yaml;\n",
     "    kubectl patch svc ngnix-service -p '{\"spec\":{\"externalTrafficPolicy\":\"Local\"}}';\n",
@@ -445,16 +445,16 @@
     "    wget -c https://go.dev/dl/go1.22.0.linux-amd64.tar.gz;\n",
     "    sudo tar -C /usr/local/ -xzf go1.22.0.linux-amd64.tar.gz;\n",
     "    export PATH=$PATH:/usr/local/go/bin;\n",
-    "    cd ~/p4-integrations-nodeport/\n",
+    "    cd ~/P4Kube/\n",
     "    kubectl apply -f metrics-server.yaml;\n",
     "    kubectl patch deployment metrics-server -n kube-system --type 'json' -p '[{\"op\": \"add\", \"path\": \"/spec/template/spec/containers/0/args/-\", \"value\": \"--kubelet-insecure-tls\"}]';\n",
-    "    cd ~/p4-integrations-nodeport/kubectl-plugin;\n",
+    "    cd ~/P4Kube/kubectl-plugin;\n",
     "    go get k8s.io/client-go@latest;\n",
     "    go get k8s.io/metrics/pkg/client/clientset/versioned;\n",
     "    cp main.go_LOAD_AWARE main.go;\n",
     "    go build;\n",
     "\n",
-    "    echo 'export PATH=\"/home/ubuntu/p4-integrations-nodeport/kubectl-plugin/:$PATH\"' >> ~/.bashrc;\n",
+    "    echo 'export PATH=\"/home/ubuntu/P4Kube/kubectl-plugin/:$PATH\"' >> ~/.bashrc;\n",
     "'''\n",
     "node.execute(script)"
    ]
@@ -550,9 +550,9 @@
     "# Build script step-by-step, capturing output after each command\n",
     "script = f'''\n",
     "echo \"Start\"\n",
-    "export PATH=\"/home/ubuntu/p4-integrations-nodeport/kubectl-plugin:/usr/local/go/bin:$PATH\"\n",
+    "export PATH=\"/home/ubuntu/P4Kube/kubectl-plugin:/usr/local/go/bin:$PATH\"\n",
     "echo \"Path installed\"\n",
-    "cd /home/ubuntu/p4-integrations-nodeport/kubectl-plugin || (echo \"cd failed\" && exit 1)\n",
+    "cd /home/ubuntu/P4Kube/kubectl-plugin || (echo \"cd failed\" && exit 1)\n",
     "echo \"Directory switched\"\n",
     "echo \"Stopped previous plugin run\"\n",
     "cp main.go_{load_aware_string} main.go || (echo \"cp failed\" && exit 1)\n",
