--- a/P4Kube.ipynb
+++ b/P4Kube.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "# print(slice.get_node('master').get_interfaces()[0])\n",
     "# Connect master-if1 and p4switch-if1 to 'ms'\n",
-    "bridges['ms'].add_interface(p4_node.get_interface('p4switch-if1-p1'))\n",
+    "bridges['ms'].add_interface(slice.get_node('p4switch').get_interface('p4switch-if1-p1'))\n",
     "bridges['ms'].add_interface(slice.get_node('master').get_interface('master-if1-p1'))\n",
     "\n",
     "# Connect client-if1 and p4switch-if2 to 'cs'\n",
