--- a/P4Kube.ipynb
+++ b/P4Kube.ipynb
@@ -11,7 +11,6 @@
     "\n",
     "# Update this line to specify your project id\n",
     "project_id = \"YOUR_PROJECT_ID\"\n",
-    "GITHUB_TOKEN = 'YOUR_GITHUB_TOKEN'\n",
     "\n",
     "fablib = fablib_manager(project_id=project_id)\n",
     "\n",
@@ -221,7 +220,7 @@
    "source": [
     "# Create a token in github and clone P4Kube code\n",
     "p4project = f\"\"\"\n",
-    "    git clone https://{GITHUB_TOKEN}:x-oauth-basic@github.com/gareging/P4Kube.git\n",
+    "    git clone https://github.com/gareging/P4Kube.git\n",
     "\"\"\"\n",
     "slice.get_node('p4switch').execute(p4project)\n",
     "print('Done, move to the next step')"
@@ -385,9 +384,8 @@
    "outputs": [],
    "source": [
     "# Clone repo\n",
-    "print(GITHUB_TOKEN)\n",
     "node = slice.get_node('master')\n",
-    "script = f'git clone https://{GITHUB_TOKEN}:x-oauth-basic@github.com/gareging/P4Kube.git;'\n",
+    "script = f'git clone https://github.com/gareging/P4Kube.git;'\n",
     "node.execute(script)"
    ]
   },
