--- a/P4Kube.ipynb
+++ b/P4Kube.ipynb
@@ -220,7 +220,7 @@
    "source": [
     "# Create a token in github and clone P4Kube code\n",
     "p4project = f\"\"\"\n",
-    "    git clone https://github.com/gareging/P4Kube.git\n",
+    "    git clone https://github.com/gareging/P4Kube.git;\n",
     "\"\"\"\n",
     "slice.get_node('p4switch').execute(p4project)\n",
     "print('Done, move to the next step')"
