--- a/P4Kube_experiments.ipynb
+++ b/P4Kube_experiments.ipynb
@@ -11,7 +11,7 @@
     "from fabrictestbed_extensions.fablib.fablib import FablibManager as fablib_manager\n",
     "\n",
     "# Update this line to specify your project id\n",
-    "project_id = \"5f00e1ce-d082-4a2b-b08f-889658e932b7\"\n",
+    "project_id = \"YOUR_PROJECT_ID\"\n",
     "\n",
     "fablib = fablib_manager(project_id=project_id)\n",
     "\n",
