--- a/P4Kube_setup.ipynb
+++ b/P4Kube_setup.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reinitializing the slice or creating a new slice\n",
+    "# Reinitializing the slice or creating a new slice (choose the site and the corresponding string it below)\n",
     "slice_name = 'My_P4Kube_slice' \n",
     "try:\n",
     "    # Reinitializes the existing slice\n",
@@ -46,7 +46,7 @@
     "    slice = fablib.new_slice(name=slice_name)\n",
     "    vm_names = ['p4switch', 'master', 'client'] + [f'node{i}' for i in range(1, 11)]\n",
     "    for vm_name in vm_names:\n",
-    "        node = slice.add_node(name=vm_name, site='RUTG', image='default_ubuntu_20')\n",
+    "        node = slice.add_node(name=vm_name, site='CHOOSE_THE_SITE', image='default_ubuntu_20')\n",
     "        node.set_capacities(cores=2, ram=6, disk=10)\n",
     "        node.add_component(model='NIC_Basic', name='if1')\n",
     "    \n",
