--- a/P4Kube_experiments.ipynb
+++ b/P4Kube_experiments.ipynb
@@ -30,7 +30,7 @@
     "try:\n",
     "    # Reinitializes the existing slice\n",
     "    slice = fablib.get_slice(slice_name)\n",
-    "    slice.list_nodes()\n",
+    "    #slice.list_nodes()\n",
     "    print('Done retrieving the existing slice')\n",
     "except:\n",
     "    print('Slice not found')"
@@ -73,6 +73,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7dd6d103-a35d-4f6e-b0af-e7c75496e79d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Remove all deployments except the first one')\n",
+    "node = slice.get_node('master')\n",
+    "print('Removing the QUIC and the second nginx instance; Removing the current plugin instance')\n",
+    "script = \"cd ~/P4Kube; kubectl delete -f nginx-deployment2.yaml; kubectl delete -f nginx-service2.yaml; kubectl delete -f quic.yaml;\"\n",
+    "node.execute(script)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e5ed59d6-8f17-44b6-b737-393b9f18b5df",
    "metadata": {},
    "outputs": [],
@@ -88,7 +102,7 @@
     "# Total number of request\n",
     "concur = 500\n",
     "# Timeout (default is 30)\n",
-    "timeout = 30\n",
+    "timeout = 300\n",
     "# URL of the deployment\n",
     "url = 'http://10.0.0.2/'\n",
     "# Version of P4Kube you would like to test: LA (Load aware) or NO_LA (Load un-aware)\n",
@@ -164,7 +178,9 @@
    "outputs": [],
    "source": [
     "print('Results')\n",
-    "print(type_, 'c=', concur, 'total=', total, 'test type', script_name)\n",
+    "print(type_, 'c=', concur, 'total=', total)\n",
+    "if stress:\n",
+    "    print('Stress pattern:', script_name)\n",
     "node = slice.get_node('client')\n",
     "node.execute(f'cat results_{type_}_{total}_c_{concur}.txt')\n",
     "\n",
@@ -182,14 +198,6 @@
     "        \n",
     "print('Done')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b48838d-b019-4853-9bc3-44c775db8cc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
