--- a/P4Kube_setup.ipynb
+++ b/P4Kube_setup.ipynb
@@ -185,7 +185,7 @@
     "switch_script = \"\"\"\n",
     "    git clone https://github.com/jafingerhut/p4-guide;\n",
     "    git clone https://github.com/gareging/p4kube;\n",
-    "    cp p4kube/install-p4dev-v5.sh p4-guide/bin/install-p4dev-v5.sh\n",
+    "    cp p4kube/install-p4dev-v5.sh p4-guide/bin/install-p4dev-v5.sh;\n",
     "    sudo bash p4-guide/bin/install-p4dev-v5.sh; \n",
     "\"\"\"\n",
     "slice.get_node('p4switch').execute(switch_script)\n",
